--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqGH-vLqWoKxeUdO_-j3FfRt_ickuQEG-QCUroW7k&s">
+	<h1>Amaresh Bale</h1>
+	<a href="https://www.linkedin.com/in/amaresh-bale-558680203/">My Linkdin Profile</a>
+	<section id="skills">
+		<p><b>My Skills</b></p>
+		<ol>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>Javascript</li>
+		</ol>
+	</section>
+	<section id="projects">
+		<p><b>Projects</b></p>
+		<ul>
+			<li>Compressor And Decompressor of a file</li>
+			<li>Music App</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
