--- a/main.html
+++ b/main.html
@@ -8,24 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqGH-vLqWoKxeUdO_-j3FfRt_ickuQEG-QCUroW7k&s">
-	<h1>Amaresh Bale</h1>
-	<a href="https://www.linkedin.com/in/amaresh-bale-558680203/">My Linkdin Profile</a>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAGbzrhpTi4Q0o5o0JSRVDSZ6zifJth2yxXYg26zgW&s">
+	<h1>Akshya</h1>
+	<a href="https://www.linkedin.com/in/amaresh-bale-558680203/">my linkedin profile</a>
 	<section id="skills">
-		<p><b>My Skills</b></p>
-		<ol>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>Javascript</li>
-		</ol>
+		<P>HTML</P>
+		<P>CSS</P>
 	</section>
-	<section id="projects">
-		<p><b>Projects</b></p>
+	<section>
 		<ul>
-			<li>Compressor And Decompressor of a file</li>
-			<li>Music App</li>
+			<li>music app</li>
+			<li>delivary app</li>
 		</ul>
-	</section>
+		
+   </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
