--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<P>HTML</P>
 		<P>CSS</P>
 	</section>
-	<section>
+	<section id="projects">
 		<ul>
 			<li>music app</li>
 			<li>delivary app</li>
